compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PrivateInTrait.fir.java
public abstract interface PrivateInTrait /* PrivateInTrait*/ {
  private abstract java.lang.String getN();//  getN()

  private abstract java.lang.String getNn();//  getNn()

  private abstract void setNn(java.lang.String);//  setNn(java.lang.String)

  public static final class DefaultImpls /* PrivateInTrait.DefaultImpls*/ {
    private final java.lang.String getN();//  getN()

    private final java.lang.String getNn();//  getNn()

    private final void setNn(java.lang.String);//  setNn(java.lang.String)
  }
}
